update PWM demo: support TIM1-CH1-PA8 PWM mode output & TIM2-CH1-PA0 PWM mode output update shell demo: change DEL code from 0x7f(CTRL+Backspace) to 0x08(Backspace)

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ cscope.*
 .dir
 outdir
 outdir-*
+samples/jasontek_demos/outdir
 scripts/basic/fixdep
 scripts/gen_idt/gen_idt
 scripts/gen_offset_header/gen_offset_header
